--- a/basic_app/templates/basic_app/html/includes/_header.html
+++ b/basic_app/templates/basic_app/html/includes/_header.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <meta charset="UTF-8">
-<title>{% block title %}Basic Project{% endblock %}</title>
+<title>{% block title %}G Clipboard{% endblock %}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="description" content="Basic Project"/>
