--- a/basic_app/static/basic_app/css/index.css
+++ b/basic_app/static/basic_app/css/index.css
@@ -13,7 +13,12 @@
     height: 15px;
 }
 
-#text_area
+.no-border
+{
+    border-style: none;
+}
+
+.text_area_style
 {
     border-style: solid;
     border-radius: 5px;
@@ -41,24 +46,48 @@
     bottom: 64px;
 
     width: 100% !important;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 ._c_textbox_container
 {
-    background-color: #C2B8B2;
+    background-color: #fff;
 
     width: 100%;
-    min-height: 100px;
+    min-height: 60px;
     border-radius: 5px;
+
+    box-shadow: 0px 0px 10px 1px #C2B8B2; /* h-offset v-offset blur spread color */
+    margin-bottom: 3rem;
 }
 
 ._c_textbox_top_menu_container
 {
-    width: 100;
+    width: 100%;
     height: 54px;
 
-    /* border-bottom-style: solid;
-    border-color: white;
-    border-width: 2px;
-    border-radius: 5px; */
+    background-color: #C2B8B2;
+    border-radius: 5px;
+}
+
+._c_attachemntbox_container
+{
+    background-color: rgb(7, 89, 212);
+
+    width: 100%;
+    min-height: 60px;
+    border-radius: 5px;
+
+    box-shadow: 0px 0px 10px 1px #C2B8B2; /* h-offset v-offset blur spread color */
+    margin-bottom: 3rem;
+}
+
+._c_attachemntbox_top_menu_container
+{
+    width: 100%;
+    height: 54px;
+
+    background-color: #C2B8B2;
+    border-radius: 5px;
 }
