--- a/basic_app/templates/basic_app/html/includes/_chat_bottom_nav.html
+++ b/basic_app/templates/basic_app/html/includes/_chat_bottom_nav.html
@@ -27,6 +27,8 @@
         </div>
     </nav>
 
+    <input type="file" name="attachment_file" id="attachment_file" hidden=true class="d-none" multiple>
+
     <script>
         
     </script>
