--- a/basic_app/static/basic_app/css/index.css
+++ b/basic_app/static/basic_app/css/index.css
@@ -11,6 +11,7 @@
 .btn_img
 {
     height: 15px;
+    border-radius: 5px;
 }
 
 .no-border
@@ -96,6 +97,11 @@
     -webkit-animation: rotation 2s infinite linear;
 }
 
+.pulse_animation
+{
+     animation: shadow-pulse 2s infinite;
+}
+
 .full_opacity
 {
     opacity: 1.0 !important;
@@ -108,4 +114,14 @@
     to {
             -webkit-transform: rotate(359deg);
     }
+}
+
+@keyframes shadow-pulse
+{
+     0% {
+          box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+     }
+     100% {
+          box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+     }
 }
