--- a/basic_app/static/basic_app/css/index.css
+++ b/basic_app/static/basic_app/css/index.css
@@ -30,6 +30,8 @@
     /* resize: none; */
     overflow-x: hidden;
     overflow-y: hidden;
+
+    padding: 0.375rem 0.75rem;
 }
 
 #attach_btn, #send_btn
@@ -72,7 +74,7 @@
     border-radius: 5px;
 }
 
-._c_attachemntbox_container
+._c_attachmentbox_container
 {
     background-color: white;
 
@@ -84,7 +86,7 @@
     margin-bottom: 3rem;
 }
 
-._c_attachemntbox_top_menu_container
+._c_attachmentbox_top_menu_container
 {
     width: 100%;
     height: 54px;
