moving to an internal repo

--- a/basic_app/templates/basic_app/html/includes/_chat_bottom_nav.html
+++ b/basic_app/templates/basic_app/html/includes/_chat_bottom_nav.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
 
-    <input type="file" name="attachment_file" id="attachment_file" hidden=true class="d-none" multiple>
+    <input type="file" name="attachment_file" id="attachment_file" hidden=true class="d-none">
 
     <script>
         
